@startuml
package "API" {
    component AllowedActionsController
}

package "Services" {
    component AllowedActionsService
    interface IActionStrategy
    component CardTypeStrategy
    component CardStatusStrategy
    component PinStrategy
}

package "Infrastructure" {
    interface IRuleLoader
    component JsonRuleLoader
}

package "Providers" {
    interface ICardProvider
    component InMemoryCardProvider
}

package "Validators" {
    component CardRequestValidator
    component CardDetailsValidator
}



note right of AllowedActionsController
    Main Controller:
    Handles requests for allowed actions.
    Key method: GetAllowedActions()
end note

AllowedActionsController --> AllowedActionsService
AllowedActionsService --> IActionStrategy
IActionStrategy <|-- CardTypeStrategy
IActionStrategy <|-- CardStatusStrategy
IActionStrategy <|-- PinStrategy
AllowedActionsController --> ICardProvider
ICardProvider <|-- InMemoryCardProvider
AllowedActionsController --> CardRequestValidator
AllowedActionsController --> CardDetailsValidator
AllowedActionsService --> IRuleLoader
IRuleLoader <|-- JsonRuleLoader
@enduml
